[package]
name = "egress_proxy"
version = "0.1.0"
authors = ["Damon Rolfs <drolfs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

[[bin]]
name = "egress-proxy"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33.0"
futures = "0.1.27"
log = "0.4.6"
env_logger = "0.6.1"
actix-web = "1.0.2"
actix-http = "0.2.4"
actix-rt = "0.2.3"
actix-service = "0.4.1"
listenfd = "0.3.3"
prometheus = "0.7.0"
lazy_static = "1.3.0"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
url = "1.7.2"
stopwatch = "0.0.7"
#validator = "0.8.0"
#validator_derive = "0.8.0"
